--- a/PepitoSchool.Infraestructure/PepitoSchool.Infraestructure.csproj
+++ b/PepitoSchool.Infraestructure/PepitoSchool.Infraestructure.csproj
@@ -19,4 +19,8 @@
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="5.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PepitoSchool.Domain\PepitoSchool.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
